Made max width of modal smaller to make sure nav buttons remain visible.

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ iframe {
   width: auto;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
+  max-width: 90%;
   object-fit: contain;
   display: block;
 }
